--- a/favorite_places/templates/base.html
+++ b/favorite_places/templates/base.html
@@ -2,10 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Gallery</title>
+    <title>My Places</title>
     <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
     <script src={% static "js/jquery-1.11.2.min.js" %}></script>
     <script src={% static "js/bootstrap.min.js" %}></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src={% static "js/manager.js" %}></script>
 {% block head %}{% endblock %}
 </head>
 
