--- a/favorite_places/templates/base.html
+++ b/favorite_places/templates/base.html
@@ -1,31 +1,35 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>My Places</title>
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
-    <script src={% static "js/jquery-1.11.2.min.js" %}></script>
-    <script src={% static "js/bootstrap.min.js" %}></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src={% static "js/manager.js" %}></script>
-{% block head %}{% endblock %}
-</head>
+    <head>
+        <title>My Places</title>
+        <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+        <script src={% static "js/jquery-1.11.2.min.js" %}></script>
+        <script src={% static "js/bootstrap.min.js" %}></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <script src={% static "js/manager.js" %}></script>
+        {% block head %}{% endblock %}
+    </head>
 
-<body> 
-{% if request and not request.user.is_anonymous %}
-Welcome: <b>{{ request.user }}</b>
-{% endif %}
-<a class="btn btn-primary" href="/">Categories</a>  
-<a class="btn btn-primary" href="/add_category/">Add Category</a> 
-<a class="btn btn-primary" href="/places/">Places</a>
-<a class="btn btn-primary" href="/add_place/">Add Place</a>
-                        {% if request and not request.user.is_anonymous %}
-                        <a class="btn btn-primary" href="/logout/">Logout</a>
-                        {% else %}
-                        <a class="btn btn-primary" href="/login/">Login</a>
-                        {% endif %}
-{% block body %}{% endblock %}
+    <body ng-app="placeModule">
+        <center><h3>{{ message }}</h3></center>
+        <div ng-controller="placeController" style="width: 1200px; margin: auto">
+            {% if request and not request.user.is_anonymous %}
+            Welcome: <b>{{ request.user }}</b>
+            {% endif %}
 
-</body>
+            <a class="btn btn-primary" href="/">Categories</a>  
+            <a class="btn btn-primary" href="/add_category/">Add Category</a> 
+            <a class="btn btn-primary" href="/places/">Places</a>
+            <a class="btn btn-primary" href="/add_place/">Add Place</a>
+            {% if request and not request.user.is_anonymous %}
+            <a class="btn btn-primary" href="/logout/">Logout</a>
+            {% else %}
+            <a class="btn btn-primary" href="/login/">Login</a>
+            {% endif %}
+            {% block body %}{% endblock %}
+
+        </div><!-- end of div placeController -->
+    </body>
     {% block footer %}{% endblock %}
 </html>
