get all categories on start

--- a/favorite_places/templates/base.html
+++ b/favorite_places/templates/base.html
@@ -14,6 +14,7 @@
     <body ng-app="placeModule">
         <div ng-controller="placeController" style="width: 1200px; margin: auto">
         <center><h3>[[ message ]]</h3></center>
+        <button ng-click="GetAllCategories()">Get All Data</button>
             {% if request and not request.user.is_anonymous %}
             Welcome: <b>{{ request.user }}</b>
             {% endif %}
@@ -28,6 +29,7 @@
             <a class="btn btn-primary" href="/login/">Login</a>
             {% endif %}
             {% block body %}{% endblock %}
+
 
         </div><!-- end of div placeController -->
     </body>
