--- a/favorite_places/templates/index.html
+++ b/favorite_places/templates/index.html
@@ -3,8 +3,20 @@
 
 {% block body %}
 
+<table border="1" width="100%">
+    <tr>
+        <td width="20%">
+            <center>
             <div ng-repeat="category in categories">
-                [[ category.title ]]<br>
+                <img src="[[ category.icon ]]" width="200" height="200"></img><br>
+                [[ category.title ]]<br><hr>
             </div>
+            </center>
+        </td>
+        <td>
+        </td>
+
+    </tr>
+</table>
 
 {% endblock %}
