tweaked index page

--- a/favorite_places/templates/index.html
+++ b/favorite_places/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-<table border="1" width="100%">
+<table class="table" border="1" width="100%">
     <tr>
         <td width="20%">
             <center>
